2005-10-08  Andrew Cagney  <cagney@redhat.com>

	* EventLoop.java: Add .remove, and .runEventLoop.  Rewrite
	.runPending, .runPolling, and .run to use .runEventLoop.  Replace
	.millisecondsToNextTimer with getTimerEventMillisecondTimeout.
	Relocate .requestStop, and .checForTimerEvents.

	* TestEventLoop.java: Use Tid.get, add .eventTid replacing Pid.get
	calls.

2005-10-07  Andrew Cagney  <cagney@redhat.com>

	* EventLoop.java: Make pendingEvents a synchronizedList.  Rename
	.appendEvent to .add.  Add method .addToPending.
	* TestEventLoop.java: Update.
	
	* Signal.java: New.
	* SignalEvent.java: Extend Signal.java.
	* EventLoop.java: Update.  Make .signalHandlers a Map.  Rename
	.addHandler to .add.
	* TestEventLoop.java: Update.

	* TimerEvent.java: Add .getTimeMillis, modify .reSchedule so that
	it returns true if a re-schedule is required.  Rename .value to
	.timeMillis, and .period to .periodMills, make private.
	* EventLoop.java: Update.  Make .timerEvents a SortedMap, rename
	.addTimerEvent to .add,
	* TestEventLoop.java: Update.
	
2005-09-27  Andrew Cagney  <cagney@redhat.com>

	* Event.java, EventLoop.java, PollEvent.java, SignalEvent.java:
	More comment changes.

2005-09-18  Andrew Cagney  <cagney@redhat.com>

	* package.html: New file.

2005-09-09  Andrew Cagney  <cagney@redhat.com>

	* Move com/redhat/fedora/frysk/event/ to frysk/event/.

2005-08-22  Andrew Cagney  <cagney@redhat.com>

	* EventLoop.java: Rename TimerEvent's "removeEvent" to "remove".
	For "runPolling", remove the timer event.
	* TestEventLoop.java: Update.
	
	* TestEventLoop.java: Add "testSignalHandler".
	* SignalEvent.java: Add "hashCode" and "equals", remove
	"compareTo".
	* EventLoop.java: Add "remove" for SignalEvent.  Rename
	"addSignalEvent" to "addHandler", handle duplicate handlers.
	Rename "signalEvents" to "signalHandlers".  Add "processSignal".

2005-08-14  Andrew Cagney  <cagney@redhat.com>

	* EventLoop.java: Fix comments.
	